--- a/tests/find_netcdf/CMakeLists.txt
+++ b/tests/find_netcdf/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(find_netcdf LANGUAGES C CXX Fortran)
-find_package(NetCDF REQUIRED COMPONENTS CXX F90)
+find_package(NetCDF REQUIRED COMPONENTS CXX F90 F77)
 
 
 add_executable(test_netcdf_c test_netcdf_c.c)
@@ -12,8 +12,12 @@ add_executable(test_netcdf_f90 test_netcdf_f90.f90)
 target_link_libraries(test_netcdf_f90 PRIVATE ${NETCDF_LIBRARIES})
 target_include_directories(test_netcdf_f90 PRIVATE ${NETCDF_INCLUDE_DIRS})  # FIXME: FindNetCDF should set this
 
+add_executable(test_netcdf_f77 test_netcdf_f77.f)
+target_link_libraries(test_netcdf_f77 PRIVATE ${NETCDF_LIBRARIES})
+target_include_directories(test_netcdf_f77 PRIVATE ${NETCDF_INCLUDE_DIRS})  # FIXME: FindNetCDF should set this
 
-foreach(exe test_netcdf_c test_netcdf_cxx test_netcdf_f90)
+
+foreach(exe test_netcdf_c test_netcdf_cxx test_netcdf_f90 test_netcdf_f77)
     # Add each test executable to the CTest configuration.
     add_test(
         NAME "${exe}"
